k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zad-demo-app
  labels:
    name: zad-demo-app
